<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="at.android.smartbot.EngineControlActivity" >

    <Spinner
        android:id="@+id/spinner_action_code"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <Spinner
        android:id="@+id/spinner_direction_code"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner_action_code"
        android:layout_below="@+id/spinner_action_code"
        android:layout_marginTop="10dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/spinner_direction_code"
        android:stretchColumns="1">

        <TableRow 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">
            <TextView 
                android:id="@+id/text_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_id"
                android:layout_marginRight="20dp"/>
            <EditText
		        android:id="@+id/et_id"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
				android:gravity="right"
		        android:ems="10"/>
        </TableRow>
        <TableRow 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">
            
            <TextView 
                android:id="@+id/text_dutycycle_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_dutycycle_right"
                android:layout_marginRight="20dp"/>
            
            <EditText
		        android:id="@+id/et_dutycycle_right"
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:ems="10" />
            
            <TextView 
                android:id="@+id/text_dutycycle_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_dutycycle_left"
                android:layout_marginRight="20dp"/>
            
            <EditText
		        android:id="@+id/et_dutycycle_left"
		        android:layout_width="50dp"
		        android:layout_height="wrap_content"
		        android:ems="10" />
            
        </TableRow>
    </TableLayout>

</RelativeLayout>
